# srpprivatewasdailyhrbot

./: .gitignore  tempk
1srpbothrdaily/: ARCHITECTURE_DIAGRAM.md  AWS_COST_OPTIMIZATION.md  AWS_EC2_DEPLOYMENT.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COST_SAVINGS_SUMMARY.md  DEPLOY_TO_AWS.md  FEATURES.md  FEATURE_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  MATHEMATICAL_EXAMPLES.md  OPTIMIZATION_REPORT.md  POSITION_RECOVERY.md  POSITION_SIZE_SAFETY.md  POSTMAN_COLLECTION.json  PROJECT_STATUS.md  QUICK_START_UV.md  README.md  README_QUICK.md  SCRIPTS_GUIDE.md  STUDENT_README.md  config.example.yaml  config.yaml  env.example  pyproject.toml  requirements.txt  run_bot.py  setup.sh  start_api.sh  start_bot.sh  start_tests.sh  stop_bot.sh  trading-bot.service
1srpbothrdaily/src/: __init__.py  api_server.py  breakout_bot.py  config_loader.py  delta_client.py  main.py
1srpbothrdaily/tests/: __init__.py  test_api_server.py  test_breakout_bot.py  test_breakout_logic.py  test_config_loader.py  test_delta_client.py  test_e2e.py  test_timeframes.py
tempk/: tempk
